--- a/demo/www/templates/feel.html
+++ b/demo/www/templates/feel.html
@@ -29,7 +29,7 @@
 
                         <div class="col " style="position:relative;top: 40px;;">
 
-                            <button ui-sref="app.profile" class="button button-balanced button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
+                            <button ui-sref="app.profile" class="button button-balanced button-raised icon-right" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
                         </div>
                     </div>
