--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Explore" style="background-image: url('img/prototype/sap_app_bg.jpg');background-size:cover;" >
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" >
         <div class="list " >
-            <div class="list">
+            <div class="list" style="opacity: 0.9;">
                 <div ng-controller="ModalCtrl" class="card card-gallery item item-text-wrap">
-                    <div class="ink dark-bg">
+                    <div class="ink dark-bg" >
                         <img class="full-image" src="img/redeem/walkyourway.jpg">
                         <!--<h2><strong>Join Bootcamp right now</strong> </h2>-->
 
@@ -97,7 +97,7 @@
                 </div>
             <div class="card">
                 <div class="item item-divider" href="#">
-                    <h3>Reviews</h3>
+                    <h3>Track Steps</h3>
                 </div>
                 </div>
             <div class="card">
@@ -110,7 +110,7 @@
                 <div class="item item-text-wrap" href="#">
                     <h3>Rewards</h3>
                     <h4>1. 200 points for grand winner.</h4>
-                    <h4>1. 100 points for participants with 100,00 steps.</h4>
+                    <h4>2. 100 points for participants with 100,00 steps.</h4>
                 </div>
             </div>
 
