--- a/demo/www/templates/privacy.html
+++ b/demo/www/templates/privacy.html
@@ -34,7 +34,7 @@
         <!--</div>-->
 
 
-            <div class="tabs tabs-calm" >
+            <div class="tabs tabs-calm" style="background-color: transparent" >
                 <a ui-sref="app.login" class="tab-item">
                     Reject
                 </a>
