--- a/demo/www/templates/track.html
+++ b/demo/www/templates/track.html
@@ -26,7 +26,7 @@
         <!--</a>-->
         <!--</div>-->
         <!--</div>-->
-        <div class="tabs tabs-positive tabs-icon-top static" >
+        <div class="tabs tabs-icon-top static" style="opacity: 0.7;">
             <a class="tab-item active"  class="tab-item">
                 <i class="icon ion-arrow-graph-up-right"></i> Track
             </a>
