--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -8,7 +8,7 @@
         <!--</div>-->
         <div class="item card-item" style="position: relative; top: 150px; ">
             <div  class="card stable-bg ink ink-dark" style="background-color: transparent;">
-                <div class="item  item-text-wrap">
+                <div class="item  item-text-wrap" style="color: white;">
                     <!--<span class="avatar" style="background-image: url('img/Mani.png');"></span>-->
                     Connect your favorite apps to get a complete picture of your wellness.
 
@@ -28,9 +28,9 @@
             <div class = "row text-center">
                 <div class="col ">
 
-                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/health_icon.jpg" style="-webkit-background-size:background-size: cover;"  ></button>
-                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/fitbit_icon.jpg" style="-webkit-background-size:background-size: cover;"  ></button>
-                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/up_icon.jpg" style="-webkit-background-size:background-size: cover;"  ></button>
+                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/health_icon.png" style="background-size:cover " ></button>
+                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/fitbit_icon.png" style="-webkit-background-size:background-size: cover;"  ></button>
+                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/up_icon.png" style="-webkit-background-size:background-size: cover;"  ></button>
                </div>
             </div>
             <div class = "row text-center">
@@ -42,7 +42,7 @@
 
                 <div class="col " style="position: relative; top: 100px;">
 
-                    <button ui-sref="app.privacy" class="button button-balanced button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
+                    <button ui-sref="app.privacy" class="button button-balanced button-raised icon-right" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
                 </div>
             </div>
