--- a/demo/www/templates/feel.html
+++ b/demo/www/templates/feel.html
@@ -9,19 +9,19 @@
                 <div class="eag-home-container">
                     <div class ="row">
                         <div class="col">
-                            <button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label"></p></div>
+                            <button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label" style="color: white">Super Energetic</p></div>
 
-                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/relaxed.png" ></button><p class="eag-home-label"></p></div>
-
-                    </div>
-                    <div class ="row">
-                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_tired.png" ></button><p class="eag-home-label"></p></div>
-                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/exhausted.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/relaxed.png" ></button><p class="eag-home-label" style="color: white">Relaxed</p></div>
 
                     </div>
                     <div class ="row">
-                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_nervous.png" ></button><p class="eag-home-label"></p></div>
-                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/stressed_out.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_tired.png" ></button><p class="eag-home-label" style="color: white">A little Tired</p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/exhausted.png" ></button><p class="eag-home-label" style="color: white">Exhausted</p></div>
+
+                    </div>
+                    <div class ="row">
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_nervous.png" ></button><p class="eag-home-label" style="color: white">A little nervous</p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/stressed_out.png" ></button><p class="eag-home-label" style="color: white">Stressed Out</p></div>
 
                     </div>
                     <div class = "row text-center">
