--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -76,7 +76,7 @@
 </ion-view>
 <script id="templates/modal.html" type="text/ng-template ">
     <ion-modal-view style="background-image: url('img/prototype/sap_app_bg.jpg');background-size:cover;" >
-        <ion-header-bar class="bar bar-header bar-balanced">
+        <ion-header-bar class="bar bar-header bar-balanced" style="opacity: 0.3;">
             <!--<h1 >Group Detail</h1>-->
             <!--<a class="button icon-left ion-chevron-left button-clear button-dark">Back</a>-->
             <button class="button icon-left ion-chevron-left button-clear button-dark "  ng-click="modal.hide()"></button>
