--- a/demo/www/templates/redeem.html
+++ b/demo/www/templates/redeem.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Redeem" style="background-image: url('img/prototype/sap_app_bg.jpg');background-size:cover;" >
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" >
         <div class="hero" style="background-image: url('img/prototype/sap_app_bg.jpg'); ">
-            <div class="content">
+            <div class="content" style="position: relative;top: 10px;">
                 <div class="avatar" style="background-image: url('img/eric.png');"></div>
                 <h3><a class="light">Eric Stark</a></h3>
-                <h5 style="color:slategrey ">Health Score</h5>
-                <p><i class="icon ion-arrow-up-a">20%</i></p>
-                <h4 style="color: #0074d6"> Point 780 |  Program 12 </h4>
+                <h5 style="color:white ">Health Score</h5>
+                <p><i class="icon ion-arrow-up-a"style="color:white;">20%</i></p>
+                <h6 style="color:white; position:relative;top: -25px;"> Point 780 |  Program 12 </h6>
             </div>
         </div>
 
