--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -27,7 +27,7 @@
                         <img class="full-image" src="img/redeem/bootcamp.jpg">
                     </div>
                     <div class = "row">
-                        <h2 style="background-color:white"  >Because of your high risk of<strong> paternity level </strong> submitted a week ago
+                        <h2 style="background-color:white"  >Because of your <strong> paternity leave </strong> submitted a week ago
                             <div class="item tabs  ">
                                 <a class="tab-item balanced-bg  "  ng-click="modal.show()">
                                     <i class="ico"> Explore</i>
