--- a/demo/www/templates/assessment.html
+++ b/demo/www/templates/assessment.html
@@ -20,13 +20,13 @@
                     <h2 class="centerfont">My Risks</h2>
                     <a class="item item-icon-left item-text-wrap item-icon-right" >
                         <i class="icon ion-ios-bookmarks"></i>
-                        <h3>Obesity</h3>
+                        <h3>Low activity level</h3>
                         <h4><strong>Your Risk: </strong> 45%</h4>
                         <i class="icon ion-arrow-up-a">5%</i>
                     </a>
                     <a class="item item-icon-left item-text-wrap item-icon-right" >
                         <i class="icon ion-ios-bookmarks"></i>
-                        <h3>Anxiety Disorder</h3>
+                        <h3>Stress</h3>
                         <h4><strong>Your Risk: </strong> 28%</h4>
                         <i class="icon ion-arrow-up-a">3%</i>
                     </a>
