--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -9,7 +9,7 @@
 
                     </div>
                     <div class = "row">
-                             <h2 style="background-color:white"  >Because of your high risk of<strong> obesity </strong> and low activity level
+                             <h2 style="background-color:white"  >Because of <strong> high risk of stress and low activity level</strong> lately  <br>
 
                                  <div class="item tabs  ">
                                 <a class="tab-item balanced-bg  "  ng-click="modal.show()">
@@ -90,9 +90,9 @@
             <div class="card">
                 <div class="item item-text-wrap">
                     <h2>Walk Your Way to Health</h2>
-                    <h3 class="ink-float">Because of your high risk of<strong> paternity level </strong> submitted a week ago</h3>
+                    <h3 class="ink-float">Because of <strong>high risk of stress and low activity level</strong></h3>
                     <h3>280+ Joined</h3>
-                    <h3 style="border-style: solid" >Jul 20,2015 - Aug 14,2015</h3>
+                    <h3 style="border-style: solid" >Jan 20,2016 - Mar 31,2015</h3>
                 </div>
                 </div>
             <div class="card">
