--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -28,7 +28,7 @@
             <div class = "row text-center">
                 <div class="col ">
 
-                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/health_icon.png" style="background-size:cover " ></button>
+                <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8" ng-click="saveWorkout()"><img src="img/prototype/health_icon.png" style="background-size:cover " ></button>
                 <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/fitbit_icon.png" style="-webkit-background-size:background-size: cover;"  ></button>
                 <button ui-sref="app.privacy" class="button square button-clear button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8"><img src="img/prototype/up_icon.png" style="-webkit-background-size:background-size: cover;"  ></button>
                </div>
