--- a/demo/www/templates/activity.html
+++ b/demo/www/templates/activity.html
@@ -18,9 +18,12 @@
             </div>
             <div class="card">
                 <ion-item>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/rQaENEaAHqc" frameborder="0" width="300" height="315"></iframe>
-                    </div>
+                    <!--<div class="video-container">-->
+                        <!--<iframe width="300" height="315" src="http://www.youtube.com/embed/rQaENEaAHqc" frameborder="0"  allowfullscreen></iframe>-->
+                    <!--<iframe width="300" height="315" src="img/youtube.jpg" frameborder="0"  allowfullscreen></iframe>-->
+                    <img class="full-image" src="img/youtube.jpg">
+
+                    <!--</div>-->
                 </ion-item>
             </div>
         </div>
